# nemesis-crypto-trading

./: .commitlintrc.json  .env.example  .gitignore  README.md  REFERENCES.md
.github/workflows/: ci.yml
config/: nemesis.toml
crates/: Cargo.toml
crates/nemesis-core/: Cargo.toml  build.rs
crates/nemesis-core/src/: lib.rs  metrics.rs
crates/nemesis-execution/: Cargo.toml
crates/nemesis-execution/src/: engine.rs  lib.rs  paper_exchange.rs  persistence.rs  rate_limiter.rs  reconciler.rs  risk.rs
crates/nemesis-execution/src/exchange/: binance.rs  mod.rs
crates/nemesis-main/: Cargo.toml
crates/nemesis-main/src/: alerts.rs  config.rs  http_server.rs  main.rs  metrics.rs  secrets.rs
crates/nemesis-market/: Cargo.toml
crates/nemesis-market/src/: bar_builder.rs  ingester.rs  lib.rs  parser.rs  publisher.rs  session_monitor.rs
crates/nemesis-market/tests/: determinism_test.rs  golden_bar_test.rs
docs/: RUNBOOK.md
infra/: Dockerfile  docker-compose.yml
infra/backup/: backup-cronjob.yaml
infra/grafana/: nemesis-overview.json
infra/k8s/: deployment.yaml  service.yaml
infra/loki/: promtail-config.yaml
migrations/: 20260701_000001_initial_schema.sql  20260701_000002_timescale_bars.sql
proto/: envelope.proto
python/nemesis_alpha/: pyproject.toml
python/nemesis_alpha/scripts/: download_eth_chunked.py  download_ticks.py  generate_proto.py  optimize_ofi.py  run_backtest.py
python/nemesis_alpha/src/nemesis_alpha/: analytics.py  backtest.py  backtest_engine.py  consumer.py  db.py  liquidity_sweep_strategy.py  ofi_strategy.py  signals.py  strategy.py  walk_forward.py
python/nemesis_alpha/src/nemesis_alpha/proto/: __init__.py
python/nemesis_alpha/tests/: test_strategies.py
tests/: test_e2e_bar_flow.py
