[package]
name = "nemesis-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
nemesis-core = { path = "../nemesis-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
thiserror = "1"
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
dashmap = "5"
sqlx = { workspace = true }
