[package]
name = "nemesis-main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nemesis"
path = "src/main.rs"

[dependencies]
nemesis-core = { path = "../nemesis-core" }
nemesis-market = { path = "../nemesis-market" }
nemesis-execution = { path = "../nemesis-execution" }
tokio = { workspace = true, features = ["full", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
