[package]
name = "nemesis-market"
version = "0.1.0"
edition = "2021"

[dependencies]
nemesis-core = { path = "../nemesis-core" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
prost = { workspace = true }
bytes = "1"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "nemesis-backtest"
path = "src/bin/backtest.rs"
