[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemesis-alpha"
version = "0.1.0"
dependencies = [
    "protobuf>=4.25.0",
    "grpcio-tools>=1.60.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
